tests/NormalTests/paczka1/fuzzy1/71269113.err
Error in line 3: CTrjQhnxe A455 99,4
Error in line 2: S922 A396 67,7
Error in line 16: S922 S922 1,9
Error in line 27: PtXHf 455 74,9
Error in line 33: HQq8LfSsr2S S922 54,9
